--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "note-rocket"
 version = "0.1.0"
 edition = "2021"
+authors = ["zhouboyi<1144188685@qq.com>"]
+license = "MIT"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
+diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
+chrono = "0.4"
+anyhow = "1.0.57"
+
+[dependencies.rocket_sync_db_pools]
+version = "0.1.0-rc.2"
+features = ["diesel_sqlite_pool", "sqlite_pool"]
